confs/pi-hole/pi-hole_app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pihole-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole-c
        image: pihole/pihole:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: pihole-pvc
          mountPath: "/etc/pihole"
        - name: dnsmasqd-pvc
          mountPath: "/etc/dnsmasq.d"
      volumes:
      - name: pihole-pvc
        persistentVolumeClaim:
          claimName: pihole-pvc
      - name: dnsmasqd-pvc
        persistentVolumeClaim:
          claimName: dnsmasqd-pvc
